# acidalia

./: Cargo.toml  README.md
acidalia_2d/: Cargo.toml
acidalia_2d/src/: canvas.rs  lib.rs  sprite.rs
acidalia_core/: Cargo.toml
acidalia_core/src/: lib.rs
acidalia_iced/: Cargo.toml
acidalia_iced/src/: iced_element.rs  lib.rs
acidalia_imgui/: Cargo.toml
acidalia_imgui/examples/: basic_imgui.rs
acidalia_imgui/src/: imgui_element.rs  lib.rs
acidalia_proc_macros/: Cargo.toml
acidalia_proc_macros/src/: lib.rs
examples/: basic_element.rs  basic_imgui.rs
src/: engine.rs  engine_builder.rs  fps.rs  game_render.rs  graphics.rs  lib.rs  main.rs  shaders.rs  ticker.rs
src/d2/: canvas.rs  mod.rs  sprite.rs
src/gl/: iced.frag  iced.vert
src/ui/: egui_element.rs  iced_element.rs  imgui_element.rs  mod.rs
