[package]
name = "acidalia"
version = "0.1.3"
authors = ["tasgon <tasgon_@outlook.com>"]
edition = "2018"
description = "The game's game engine's engine"
license = "MPL-2.0"
keywords = ["gamedev", "graphics", "game", "engine", "minimal"]
homepage = "https://github.com/tasgon/acidalia"
repository = "https://github.com/tasgon/acidalia"
documentation = "https://docs.rs/acidalia"

[workspace]
members = ["acidalia_core", "acidalia_proc_macros"]

[features]
default = []

[dependencies]
shaderc = "0.7"
futures = "0.3"
wgpu = "0.8"
winit = "0.25"
derive_more = "0.99"
bytemuck = "1.5"
acidalia_proc_macros = { path = "./acidalia_proc_macros/", version = "0.1" }
acidalia_core = { path = "./acidalia_core", version = "0.1" }

crossbeam-channel = "0.5.0"
notify = "5.0.0-pre.6"
dashmap = "4.0"

imgui-wgpu = "0.15"
imgui = "0.7"
imgui-winit-support = { version = "0.7", default-features = false, features = ["winit-25"] }

image = "0.23"

#egui = "0.8"
#epi = "0.8"
#egui_wgpu_backend = "0.4"
#egui_winit_platform = "0.4"

#[patch.crates-io]
#winit = { path = "../winit/" }
