[package]
name = "acidalia_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acidalia = { path = ".." }

bytemuck = "1.5"

iced_wgpu = { git = "https://github.com/iced-rs/iced", branch = "0.4" }
iced_winit = { git = "https://github.com/iced-rs/iced", branch = "0.4" }